# Pymemorial

./: -files  Select-String section  .coveragerc  .gitignore  CHANGELOG.md  PROGRESS.md  check_path.py  debug_imports.py  debug_install.py  debug_output.txt  debug_pynite.py  debug_steps.py  equation.py  exemplo_memorial_area_aco.py  fix_all_imports.py  generate_memorial_html.py  memorial_completo.html  memorial_completo.md  memorial_final.html  memorial_formatted.html  memorial_professional.html  memorial_teste.md  memorial_ultimate.html  memorial_viga_CORRIGIDO.md  memorial_viga_natural.md  memorial_viga_t_v1.md  output_matrix_steps.md  pilar_comparacao_modos.html  pyproject.toml  quick_result.md  test_import.py  test_memorial_api_simples.py  test_plot_manual.py  test_regex.py  test_version.py  test_visual.py  teste.json  teste_memorial.json  update-changelog.ps1  validate_equation.py  validate_examples.py  (+6 more)
examples/: article_advanced_steps.py  beam_calculation_complete.py  debug_test.py  matrix_steps_demo.py  revolutionary_example.py  smart_memorial_example.py  test_builder_integration.py  test_pynite_backend.py  test_smart_text_processor.py
examples/core/: complete_memorial_ultimate.py
examples/document/: demo_memorial_visual.py  validate_base_document.py
examples/example_engine/: 01_viga_simples.py  02_pilar_flexocompressao.py  03_laje_macica.py  04_sapata_isolada.py  05_escada_balanco.py
examples/mathdown/: 01_basic_beam.py  02_steel_column.py  03_full_memorial.py
examples/output/: memorial_rapido.md  memorial_viga_completo.html  memorial_viga_completo.json  memorial_viga_completo.md
examples/outputs/: memorial_demo.html  memorial_demo.json
examples/visualization/: 01_basic_pm_diagram.py  02_moment_curvature_nbr8800.py  03_advanced_3d_structure.py  04_complete_calculation_report.py  05_full_integration_memorial.py  export_comparison.py  test_pyvista_quick.py  validate_exporters.py  validate_phase6_complete.py
examples/visualization/outputs/: moment_curvature_nbr8800.html  pm_diagram_basic.html  structure_3d_interactive.html
memorial_output/: memorial_processado.html
output/: memorial.html  memorial_completo.html  test_memorial.html  viga_v1.md  viga_v1_robusto.html  viga_v1_robusto.md
outputs/: 01_basic_beam.html  test_document.json
outputs/debug/pdfs/: test_custom_config.html
scripts/: commit_phase6.ps1  update_changelog_progress.ps1
src/pymemorial/: __init__.py  __version__.py  api.py  cli.py  eng_memorial.py
src/pymemorial/backends/: __init__.py  adapter.py  anastruct.py  base.py  factory.py  opensees.py  pynite.py
src/pymemorial/builder/: __init__.py  content.py  matrix_memorial.py  memorial.py  section.py  validators.py
src/pymemorial/core/: __init__.py  cache.py  calc_processor.py  calculator.py  config.py  equation - original.py  equation.py  matrix.py  matrix_ops.py  units.py  units.py.backup  value_formatter.py  variable.py
src/pymemorial/deprecated/: __version__.py
src/pymemorial/document/: __init__.py  base_document.py  memorial.py
src/pymemorial/editor/: __init__.py  natural_engine - 1048.py  natural_engine - 2049.py  natural_engine.py  natural_writer.py  render_modes.py  robustness.py  smart_parser.py  smart_textblock.py  step_engine.py  suggestion_engine.py
src/pymemorial/engine/: __init__.py  context.py  processor.py
src/pymemorial/mathdown/: __init__.py  math_parser.py
src/pymemorial/recognition/: __init__.py  __init__.py.backup  ast_parser.py  greek.py  nlp_engineering.py  parser.py  patterns.py  patterns.py.backup  text_processor.py
src/pymemorial/sections/: __init__.py  base - Copia.py  base.py  composite.py  concrete.py  concrete.py.corrupted2  factory.py  steel.py
src/pymemorial/symbols/: __init__.py  custom_registry.py
src/pymemorial/visualization/: __init__.py  base_visualizer.py  diagram_generators.py  matplotlib_utils.py  plotly_engine.py  pyvista_engine.py
tests/: conftest.py  test_pynite_backend.py  test_smoke.py  test_smoke_visualization.py  validate_phase6.py  validate_pymemorial.py
tests/debug/: test_auto_lists_debug.py  test_builder_debug.py  test_document_debug.py  test_generators.py  test_pdf_generation_debug.py  test_text_processor_debug.py
tests/smoke/: smoke_test_ast_parser.py  smoke_test_config.py  smoke_test_registry.py  smoke_test_units.py  test_calculator_smoke.py
tests/unit/: conftest.py  generate_memorial_html.py  test_adapters.py  test_backend_base.py  test_backend_factory.py  test_cache.py  test_calculator.py  test_content.py  test_equation.py  test_equation_advanced.py  test_equation_comprehensive.py  test_equation_steps.py  test_greek.py  test_memorial.py  test_memorial_integration.py  test_opensees_backend.py  test_parser.py  test_patterns.py  test_section.py  test_text_processor.py  test_units.py  test_validators.py  test_variable.py
tests/unit/core/: test_calculator.py  test_steel_area_calculation.py  test_steps_detalhado.py  test_visual_pymemorial_core.py
tests/unit/document/: test_base_document.py  test_memorial.py
tests/unit/memorial/: test_memorial_api_simples.py
tests/unit/recognition/: test_text_processor.py
tests/unit/sections/: test_composite_section.py  test_concrete_section.py  test_section_base.py  test_section_factory.py  test_steel_section.py
tests/unit/test_core/: test_calculator.py  test_calculator_advanced.py  test_calculator_scipy.py  test_config.py  test_equation.py  test_equation_integration.py  test_units_part1.py  test_units_part2.py  test_units_part3.py  test_units_part4_5.py  test_variable.py  test_variable_part1.py  test_variable_part2.py  test_variable_part3.py  test_variable_part4_5.py
tests/unit/test_editor/: exemplo_viga_completo.py  test_render_modes - Copia.py  test_render_modes.py  test_smart_textblock.py  test_step_engine - Copia (2).py  test_step_engine - Copia.py  test_step_engine.py
tests/unit/test_engine/: test_context.py  test_context_debug.py  test_eng_memorial.py  test_memorial_render_debug.py  test_processor.py
tests/unit/test_recognition/: test_ast_parser.py
tests/unit/test_symbols/: test_custom_registry.py
(+30 files in other folders)
